2001-08-13  Richard Hestilow  <hestilow@ximian.com>

	* background-properties-capplet.c (setup_dialog): Really
	override enabled this time. Really.

2001-08-13  Richard Hestilow  <hestilow@ximian.com>
 
 	* applier.c (applier_apply_prefs): Only draw disabled message
 	if do_preview. Actually, the user will never see this because
 	the correct behavior (which is done) is to assume if they're
 	running capplet, prefs->enable should be TRUE. This is because
 	we are only honoring enable as a hacker-only setting.
 	(output_compat_prefs): Output the correct "Enable" setting.
 
 	* background-properties-capplet.c (get_legacy_settings): Support
 	the "Enabled" flag. 
 
 	* preferences.c (preferences_new_from_bonobo_db): Import the
 	"enabled" flag. Note that this is not bothered with in the _pbag
 	function, because that's from the Proxy settings, which is only
 	used for the GUI capplet, which always sets enabled to True, because
 	this is a hacker-only option. Got it?

	* background-properties.xml: Add "enabled".

2001-07-31  Chema Celorio  <chema@celorio.com>

	* Makefile.am (cappletname): add DISTDIR to install-data-local

2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* background-properties-capplet.c (get_legacy_settings): Fix
	val_ulong in the gradient case

	* RELEASE : 1.5.2

2001-07-26  Bradford Hovinen  <hovinen@ximian.com>

	* applier.c (applier_apply_prefs): Don't try to load the wallpaper
	if it's not enabled

	* preferences.c (preferences_new_from_bonobo_pbag): Use
	bonobo_property_editor_client_get_value_*
	(preferences_new_from_bonobo_pbag): Set gradient_enabled properly
	from property bag
	(preferences_new_from_bonobo_pbag): Check for wallpaper == "(none)"
	(preferences_new_from_bonobo_db): Ditto above

	* applier.c (renderer_render_wallpaper): Restore some lost tweaks
	from earlier.

	* preferences.c (preferences_init): strdup the home directory

	* applier.c: Store preview widget in the renderer, not the applier
	itself
