@@ -1,3 +1,12 @@
+2001-08-17  Bradford Hovinen  <hovinen@ximian.com>
+
+	* applier.c (renderer_render_wallpaper): Adjust opacity value to
+	0...255 scale
+
+	* preferences.c (preferences_new_from_bonobo_pbag):
+	(preferences_new_from_bonobo_db): Use correct check to disable
+	opacity
+
 2001-08-13  Richard Hestilow  <hestilow@ximian.com>
 
 	* background-properties-capplet.c (setup_dialog): Really
